//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Recipes {
  id Int [pk, increment]
  name String [not null]
  instructions String [not null]
  description String
  servings Int [default: 1]
  recipeIngredients RecipeIngredients [not null]
  archivedAt DateTime
  deletedAt DateTime
}

Table Ingredients {
  id Int [pk, increment]
  name String [unique, not null]
  category IngredientCategories
  categoryId Int
  description String
  recipeIngredients RecipeIngredients [not null]
  archivedAt DateTime
  deletedAt DateTime
}

Table IngredientCategories {
  id Int [pk, increment]
  name String [unique, not null]
  description String
  ingredients Ingredients [not null]
  archivedAt DateTime
  deletedAt DateTime
}

Table RecipeIngredients {
  recipe Recipes [not null]
  recipeId Int [not null]
  ingredient Ingredients [not null]
  ingredientId Int [not null]
  quantity Float [not null]
  unit String [not null]
  archivedAt DateTime
  deletedAt DateTime

  indexes {
    (recipeId, ingredientId) [pk]
  }
}

Ref: Ingredients.categoryId > IngredientCategories.id

Ref: RecipeIngredients.recipeId > Recipes.id

Ref: RecipeIngredients.ingredientId > Ingredients.id